# cuda-manager-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  compile_and_run.sh  cuda_argument_parser.cpp  cuda_argument_parser.h  cuda_common.h  cuda_compiler.h  cuda_manager.cpp  cuda_manager.h  cuda_manager_test.cpp  cuda_memory_manager.cpp  cuda_memory_manager.h  main.cpp  nvrtctest.cpp
cuda_compiler/: CMakeLists.txt  compiler_main.cpp  cuda_compiler.cpp  cuda_compiler.h
cuda_daemon/: CMakeLists.txt  commands.h  config_reader.cpp  config_reader.h  cuda_client.cpp  cuda_client.h  cuda_server.cpp  cuda_server.h  logger.cpp  logger.h  server.cpp  server.h  socket_client.cpp
cuda_daemon/test/: client-continous.cpp  client-hello.cpp  client-multimessage.cpp  client-variable-length.cpp  kernel-launch.cpp  killer.cpp  server-example.cpp
cuda_manager/: CMakeLists.txt  compiler_main.cpp  cuda_api.cpp  cuda_api.h  cuda_argument_parser.cpp  cuda_argument_parser.h  cuda_common.h  cuda_compiler.cpp  cuda_compiler.h  cuda_manager.cpp  cuda_manager.h  cuda_memory_manager.cpp  cuda_memory_manager.h  kernel_arguments.h  main.cpp  nvrtc_from_file.cpp  nvrtctest.cpp
daemon/: CMakeLists.txt  README.md  client-continous.cpp  client-hello.cpp  client-multimessage.cpp  client-variable-length.cpp  client.cpp  commands.h  config_reader.cpp  config_reader.h  cuda_client.cpp  cuda_client.h  cuda_server.cpp  cuda_server.h  daemon.conf.in  hello-client.cpp  killer.cpp  logger.cpp  logger.h  server.cpp  server.h  socket_client.h
daemon/test/: client-continous.cpp  client-hello.cpp  client-multimessage.cpp  client-variable-length.cpp  cuda-server.cpp  kernel-launch.cpp  killer.cpp  server-example.cpp
